<resources>
    <string name="app_name">Lgoon</string>
    <string name="title_activity_register">Register</string>
    <string name="password_himt">Password</string>
    <string name="email_hint">Email</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="term_and_condition">Term and condition</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender_select">Gender</string>
</resources>
