<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_create_account_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    tools:context=".detailDisplay">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:src="@mipmap/valid"
                android:layout_width="@dimen/image_view_width"
                android:layout_height="@dimen/image_view_height"
                android:layout_gravity="center"
                android:padding="@dimen/image_padding"
                />


            
        <LinearLayout
            style="@style/displayLinearLayout"
            >
        <TextView
            style="@style/TextView"
            android:text="@string/first_name_hint"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/firstName"
            style="@style/TextView"
            android:layout_weight="1"
            android:text=""
            />
        </LinearLayout>



            <LinearLayout
                style="@style/displayLinearLayout"
                >
                <TextView
                    style="@style/TextView"
                    android:text="@string/last_name_hint"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/lastName"
                    style="@style/TextView"
                    android:layout_weight="1"
                    android:text=""
                    />
            </LinearLayout>


            <LinearLayout
                style="@style/displayLinearLayout"
                >
                <TextView
                    style="@style/TextView"
                    android:text="@string/email_hint"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/emaiId"
                    style="@style/TextView"
                    android:layout_weight="1"
                    android:text=""
                    />
            </LinearLayout>

            <LinearLayout
                style="@style/displayLinearLayout"
                >
                <TextView
                    style="@style/TextView"
                    android:text="@string/gender_select"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/gender"
                    style="@style/TextView"
                    android:layout_weight="1"
                    android:text=""
                    />
            </LinearLayout>

            <LinearLayout
                style="@style/displayLinearLayout"
                >
                <TextView
                    style="@style/TextView"
                    android:text="@string/mobile_number"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/mobileNumber"
                    style="@style/TextView"
                    android:layout_weight="1"
                    android:text=""
                    />
            </LinearLayout>
        </LinearLayout>
</ScrollView>
</LinearLayout>
